fim da movimentação de arquivos

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 
-
-
-.custom-bg {
+#todoslivros{
+          display: flex;
+          justify-content: center;
+          margin-bottom: 100px;
+}
+          .custom-bg {
     background-color: #007A7C;
   }
 
