--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+.container-main {
+
+  position: relative;
+  display: inline-block;
+  transition: 0.25s;
+}
+
+.container-main:hover {
+  top: 0;
+  left: 0;
+  box-shadow: 10px 10px 5px black;
+  background: rgba(133, 133, 155, 0.7);
+}
 
 #todoslivros{
           display: flex;
@@ -25,3 +38,14 @@
     width: 500px;
     border-bottom: solid 1px black;
   }
+
+.formulario{
+  width:50%;
+  display: inline-block;
+  border: solid lightgray 1px;
+  border-radius: 10px;
+  position: absolute;
+  padding: 20px 50px 20px 50px;
+  top: 25%;
+  left: 25%;
+}
