--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 }
 
 #titulo1{
-
+  
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 
@@ -47,10 +47,11 @@
 a {
   text-decoration: none; /* Remove o sublinhado dos links */
 }
-.cor1:hover {
-  color: aliceblue; /* Manter a mesma cor quando o mouse passa por cima */
-  text-decoration: none; /* Manter a mesma decoração de texto quando o mouse passa por cima */
+.cor1:hover{
+  color: #f0f8ff;
+  text-decoration: none;
 }
+
 .container-main {
 
   position: relative;
