--- a/style.css
+++ b/style.css
@@ -128,10 +128,11 @@ a {
   position: fixed;
   top: 0;
   bottom: 0;
-  left: -250px; /* Esconde a barra lateral por padrão */
+  left: -280px; /* Esconde a barra lateral por padrão */
   width: 250px;
   background-color: #f8f9fa;
   padding: 20px;
+  margin-left: 22px;
   transition: left 0.3s ease; /* Adiciona uma transição suave para a animação */
 }
 
@@ -140,7 +141,7 @@ a {
 }
 
 .main-content {
-  margin-left: 0; /* Define uma margem padrão do lado esquerdo */
+  margin-left: 0px; /* Define uma margem padrão do lado esquerdo */
   transition: margin-left 0.3s ease; /* Adiciona uma transição suave para a animação */
 }
 
