--- a/style.css
+++ b/style.css
@@ -15,12 +15,11 @@
   margin: auto;
   padding: 0px 15px 0px 0px;
   display: inline-block;
-  border: solid 1px lightgray;
-  border-radius: 4px;
+  border-radius:5px ;
 }
 #sidebar{
-  background-color: #651771;
-  margin-top: 100px;
+  background-color: #7E1D8D ;
+  margin-top: 77px;
   margin-bottom: 200px;
 }
 .cor{
@@ -133,10 +132,9 @@ a {
   top: 0;
   bottom: 0;
   left: -280px; /* Esconde a barra lateral por padrão */
-  width: 250px;
+  width: 220px;
   background-color: #f8f9fa;
   padding: 20px;
-  margin-left: 22px;
   transition: left 0.3s ease; /* Adiciona uma transição suave para a animação */
 }
 
